syntax = "proto3";

import "google/protobuf/timestamp.proto";

service Orchestrator {
    rpc Acquire (stream Shard) returns (stream Instruction) {}
    rpc AcquireNext(stream Shard) returns (stream Instruction) {}
    rpc Disconnect (ShardId) returns (DisconnectResult) {}
    rpc GetState (ShardId) returns (Shard) {}
    rpc SendPayload(GatewayPayload) returns (Empty) {}
}

enum InstructionType {
    DISCONNECT = 0;
    GATEWAY_PAYLOAD = 1;
    CONNECT = 2;
}

message Instruction {
    InstructionType type = 1;
    optional string json = 2;
    optional int64 shard_id = 3;
    // optional int64 seq = 4
    // optional string session_id = 5;
}

message ShardId {
    int64 shard_id = 1;
}

enum ShardState {
    STARTING = 0;
    STARTED = 1;
    STOPPED = 2;
}

// TODO: add gateway_url
message Shard {
    ShardState state = 1;
    google.protobuf.Timestamp last_seen = 2;
    double latency = 3;
    optional string session_id = 4;
    optional int64 seq = 5;
    int64 shard_id = 6;
}

enum StatusType {
    FAILED = 0;
    SUCCESS = 2;
}

message DisconnectResult {
    StatusType status = 1;
    optional Shard state = 2;
}

message GatewayPayload {
    optional int64 shard_id = 1;
    string json = 2;
}

message Empty {}
